--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       python-version: 3.8
 
    - name: Install Bandit
-     run: pip Install Bandit
+     run: pip install Bandit
 
    - name: Run Bandit Scan
      run: bandit -r .
